# rust_calculator_challenge

./: .clippy.toml  .gitignore  .rustfmt.toml  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: build.yml  test.yml
src/: expression_evaluator.rs  lib.rs  main.rs
