[package]
name = "rust_calculator_challenge"
version = "0.1.0"
edition = "2021"
authors = []
documentation = "https://docs.rs/TODO"
homepage = "https://github.com/ifeelBALANCED/rust_calculator_challenge"
repository = "https://github.com/ifeelBALANCED/rust_calculator_challenge"
readme = "README.md"
keywords = []
categories = ["no-std"]
license = "MIT/APACHE-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
